--- a/css/system.css
+++ b/css/system.css
@@ -1133,6 +1133,28 @@ to{transform:translate3d(0,0,0);opacity:1}
 .macplus-content__playlist.column8{margin: 0 -10px;}
 .mac_comment textarea{border:2px solid #d4d9dd;box-shadow:inset 0 3px 3px #ebebeb}
 .site_head_sticky{position:fixed;box-shadow:0 2px 6px rgba(0,0,0,.1);animation:fadeIn .3s ease-in both;transform: translateZ(0);background:rgba(255,255,255,.95);}
+
+.macplus_mask{background:#FAFAFA}
+.macplus_mask .macplus-pannel-bg{padding:10px}
+.macplus_mask .macplus-pannel__head .title{line-height:40px;margin-left: 5px;height:40px;font-size:18px;position:relative;font-weight:600}
+.macplus_mask .macplus-pannel__head .title:after{content:'';position:absolute;left:-15px;width:3px;height:18px;top:50%;margin-top:-9px;background:#FF443F}
+.macplus_mask .macplus-pannel__head .title.td:after{background:#FFFFFF}
+.modRlist{margin-top:-10px}
+.modRlist li{width:100%;position:relative;}
+.modRlist li .thumb,.modRlist li .thumb .quic{display:block;width:120px;height:72px;overflow:hidden;position:relative;float:left}
+.quic{background:#F5F5F5}
+.modRlist li .text{margin-left:130px;height:72px;position:relative}
+.modRlist li .text .title{font-size:14px;height:40px;line-height:20px}
+.modRlist li .text .info{font-size:12px;height:16px;line-height:16px;position:absolute;bottom:0}
+.modRlist li .text .info span{margin-right:4px;color:#999}
+
+.Preview,.Preview .mod-main{height:365px;overflow:hidden}
+.Preview li{width:100%;height:36px;line-height:36px;padding:0 10px}
+.Preview li span{float:left}
+.Preview li em{float:right;color:#999;font-size:12px}
+.Preview li:nth-child(odd){background:#F4F4F4}
+.Preview li:nth-child(even){background:#FFF}
+
 }
 @media (max-width:767px){.visible-xs{display:block!important}
 .hidden-xs{display:none!important}
