--- a/css/system.css
+++ b/css/system.css
@@ -519,7 +519,7 @@ button.swiper-pagination-bullet{border:none;margin:0;padding:0;-webkit-box-shado
 .part-num2{background-color:#ff920b!important}
 .part-num3{background-color:#ffc600!important}
 .news-content{margin-top:10px;font-size: 14px;line-height: 25px;}
-.news-content img{margin:15px 0;width:100%;height:auto}
+.news-content img{margin:15px 0;height:auto}
 .macplus-top-20{margin-top:10px}
 .playWarp{width:100%;height:auto;position:relative;margin-bottom:20px;background:#181818;margin-top:-25px}
 .playWarp .container{padding-right:0;padding-left:0}
